[package]
name = "libp2p-episub"
version = "0.1.13"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Episub: Proximity Aware Epidemic PubSub for libp2p"
homepage = "https://solcial.io/"
repository = "https://github.com/solcial/libp2p-episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]
exclude = ["test", "docker-compose.yml", "Dockerfile"]

[dependencies]
futures = "0.3.18"
libp2p-core = {version="0.41.2" }
libp2p-swarm = {version="0.44.1" }
libp2p-identity = { version="0.2.8", features = ["peerid", "ed25519"] }
multiaddr = "0.18.1"
tracing = "0.1.29"
prost = "0.9"
rand = "0.8"
thiserror = "1.0.30"
asynchronous-codec = "0.6"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }

[build-dependencies]
prost-build = "0.9"
