[package]
name = "audit-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "P2P network monitoring environment for Episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]

[dependencies]
libp2p-episub = { path = "../../" }

libp2p = "0.41.0"
anyhow = "1.0.51"
tracing = "0.1.29"
headers = "0.3"
serde_json = "1.0.72"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
axum = { version = "0.4", features = ["ws", "json", "headers"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name="audit-node"
path = "src/main.rs"