[package]
name = "episub-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Karim Agha <karim.dev@gmail.com>"]
license = "MIT"
description = "Test environment for Episub"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchornous"]

[dependencies]
libp2p-episub = { path = "../../" }
audit-node = { path = "../audit" }

futures = "0.3.18"
chrono = "0.4.19"
structopt = "0.3"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

libp2p = { version = "0.53.2", features = ["tcp","yamux","noise","tls","async-std","websocket","dns"] }

anyhow = { version = "1.0.51" }
tokio = { version = "1.14.0", features = ["full"] }
